<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sportall</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Invites</string>
    <string name="title_section4">Rankings</string>
    <string name="title_section5">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="create_free_account">Create Free Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="successful_signed_up">Successfully Signed Up, Please check your inbox to verify your email id.</string>
    <string name="signed_up_error">Sign up Error</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="sign_into">Sign into SportAll</string>
    <string name="no_such_user">No such user exist, please signup or check your email and password.</string>
    <string name="success_login">Successfully Logged in.</string>

    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Search</item>
        <item>Invites</item>
        <item>Rankings</item>
        <item>Logout</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/search</item>
        <item>@drawable/invites</item>
        <item>@drawable/trophy</item>
        <item>@drawable/logout</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
